--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ script:
   - npm run docs:build
 deploy:
   provider: pages
+  repo: https://github.com/mefarazath/mefarazath.github.io
+  target_branch: master
+  verbose: true
   skip_cleanup: true
   local_dir: docs/.vuepress/dist
   github_token: $TOKEN # A token generated on GitHub allowing Travis to push code on you repository. Set in the Travis settings page of your repository, as a secure variable
