--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ deploy:
   skip_cleanup: true
   local_dir: docs/.vuepress/dist
   github_token: $TOKEN # A token generated on GitHub allowing Travis to push code on you repository. Set in the Travis settings page of your repository, as a secure variable
-  keep_history: true
+  keep_history: false
   on:
     branch: main
