--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
-language: node_js
-node_js:
-  - lts/*
-install:
-  - npm ci
-script:
-  - npm run docs:build
-deploy:
-  provider: pages
-  verbose: true
-  skip_cleanup: true
-  local_dir: docs/.vuepress/dist
-  github_token: $TOKEN # A token generated on GitHub allowing Travis to push code on you repository. Set in the Travis settings page of your repository, as a secure variable
-  keep_history: false
-  on:
-    branch: main
+# language: node_js
+# node_js:
+#   - lts/*
+# install:
+#   - npm ci
+# script:
+#   - npm run docs:build
+# deploy:
+#   provider: pages
+#   verbose: true
+#   skip_cleanup: true
+#   local_dir: docs/.vuepress/dist
+#   github_token: $TOKEN # A token generated on GitHub allowing Travis to push code on you repository. Set in the Travis settings page of your repository, as a secure variable
+#   keep_history: false
+#   on:
+#     branch: main
