--- a/.github/workflows/deploy-vuepress.yml
+++ b/.github/workflows/deploy-vuepress.yml
@@ -15,5 +15,5 @@ jobs:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         TARGET_REPO: jenkey2011/vuepress-deploy-demo
         TARGET_BRANCH: gh_pages
-        BUILD_SCRIPT: yarn && yarn build
+        BUILD_SCRIPT: yarn && yarn docs:build
         BUILD_DIR: docs/.vuepress/dist
